Fixed dots functionality on mobile and tablet media by removing border of content-block in the Banner.

--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -1,7 +1,6 @@
 .content {
   position: relative;
   padding: 130px 48px 130px 24px;
-  border: 1px solid var(--highlight);
   color: var(--light);
   text-align: center;
 }
